--- a/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
@@ -2,6 +2,24 @@ RT_DRV_DIR  := mt76x2
 RT_DRV_PATH := ../$(RT_DRV_DIR)
 RT_DRV_NAME := mt76x2_ap
 
+CHIP_MT7620 =
+CHIP_MT76X2 =
+ifeq ($(CONFIG_RT_FIRST_CARD),7620)
+CHIP_MT7620 = y
+endif
+ifeq ($(CONFIG_RT_FIRST_CARD),7602)
+CHIP_MT76X2 = y
+endif
+ifeq ($(CONFIG_RT_FIRST_CARD),7612)
+CHIP_MT76X2 = y
+endif
+ifeq ($(CONFIG_RT_SECOND_CARD),7602)
+CHIP_MT76X2 = y
+endif
+ifeq ($(CONFIG_RT_SECOND_CARD),7612)
+CHIP_MT76X2 = y
+endif
+
 obj-$(CONFIG_MT76X2_AP) += $(RT_DRV_NAME).o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/common/crypt_md5.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/common/crypt_sha2.o
@@ -44,17 +62,15 @@ $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/tx_rx/wdev_tx.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mgmt/mgmt_entrytb.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mgmt/mgmt_ht.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mac/rtmp_mac.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mac/ral_nmac.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mcu/mcu.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mcu/mcu_and.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rf.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/phy.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rt_rf.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/mt_rf.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rlt_phy.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/phy.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/rtmp_chip.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/rate_ctrl/ra_ctrl.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/rate_ctrl/alg_legacy.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/rate_ctrl/alg_grp.o
+#$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/rate_ctrl/alg_ags.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ap/ap.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ap/ap_assoc.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ap/ap_auth.o
@@ -75,18 +91,38 @@ $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/rt_main_dev.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/rt_rbus_pci_drv.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/rt_rbus_pci_util.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/rt_pci_rbus.o
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/pci_main_dev.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/multi_main_dev.o
 
-### MT7602/MT7612
-$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/rtmp_chip.o
+
+### MT7620 (RBUS)
+ifeq ($(CHIP_MT7620),y)
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/rt6352.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/rtxx_dft.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/common/rtmp_swmcu.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/common/cmm_rf_cal.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/common/cmm_loft_cal.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rlt_rf.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rtmp_phy.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mac/ral_omac.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/rbus_main_dev.o
+ifeq ($(CONFIG_MT76X2_AP_ATE),y)
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ate/chips/rt6352_ate.o
+endif
+endif
+
+### MT7602E/MT7612E (PCIe)
+ifeq ($(CHIP_MT76X2),y)
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/rt65xx.o
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/chips/mt76x2.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mcu/mcu_and.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/mt_rf.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/phy/rlt_phy.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/mac/ral_nmac.o
+$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/os/linux/pci_main_dev.o
 ifeq ($(CONFIG_MT76X2_AP_ATE),y)
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ate/chips/mt76x2_ate.o
 endif
-
-#EXTRA_CFLAGS += -DAGS_SUPPORT
-#$(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/rate_ctrl/alg_ags.o
+endif
 
 ifeq ($(CONFIG_MT76X2_AP_ATE),y)
 $(RT_DRV_NAME)-objs += $(RT_DRV_PATH)/ate/common/rt_ate.o
@@ -217,7 +253,7 @@ endif
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DUAPSD_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
 EXTRA_CFLAGS += -DAP_SCAN_SUPPORT -DSCAN_SUPPORT
-EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_PCI_SUPPORT
+#EXTRA_CFLAGS += -DAP_PARTIAL_SCAN_SUPPORT
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DENHANCED_STAT_DISPLAY
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
@@ -249,9 +285,44 @@ ifeq ($(CONFIG_RA_NETWORK_WORKQUEUE_BH),y)
 EXTRA_CFLAGS += -DWORKQUEUE_BH
 endif
 
-### MT7602/MT7612
+### MT7620 (RBUS)
+ifeq ($(CHIP_MT7620),y)
+EXTRA_CFLAGS += -DRT6352 -DCONFIG_SWMCU_SUPPORT
+EXTRA_CFLAGS += -DRTMP_RBUS_SUPPORT -DRTMP_MAC_PCI
+EXTRA_CFLAGS += -DRTMP_MAC -DRTMP_BBP -DRLT_RF -DRTMP_RF_RW_SUPPORT
+EXTRA_CFLAGS += -DVCORECAL_SUPPORT
+EXTRA_CFLAGS += -DLOFT_IQ_CAL_SUPPORT
+EXTRA_CFLAGS += -DRTMP_TEMPERATURE_CALIBRATION
+EXTRA_CFLAGS += -DFIFO_EXT_SUPPORT
+EXTRA_CFLAGS += -DDYNAMIC_VGA_SUPPORT
+#EXTRA_CFLAGS += -DMICROWAVE_OVEN_SUPPORT
+EXTRA_CFLAGS += -DMCS_LUT_SUPPORT -DPEER_DELBA_TX_ADAPT
+EXTRA_CFLAGS += -DDROP_MASK_SUPPORT
+EXTRA_CFLAGS += -DMULTI_CLIENT_SUPPORT
+#EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
+#EXTRA_CFLAGS += -DTHERMAL_PROTECT_SUPPORT
+ifeq ($(CONFIG_MT76X2_AP_RTMP_INTERNAL_TX_ALC),y)
+EXTRA_CFLAGS += -DRTMP_INTERNAL_TX_ALC
+endif
+ifeq ($(CONFIG_MT76X2_AP_RTMP_TEMPERATURE_COMPENSATION),y)
+EXTRA_CFLAGS += -DRTMP_TEMPERATURE_COMPENSATION
+endif
+ifeq ($(CONFIG_MT76X2_AP_ADJ_PWR_CONSUMPTION),y)
+EXTRA_CFLAGS += -DADJUST_POWER_CONSUMPTION_SUPPORT
+endif
+ifeq ($(CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA),y)
+EXTRA_CFLAGS += -DRT6352_EL_SUPPORT
+endif
+ifeq ($(CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA),y)
+EXTRA_CFLAGS += -DRT6352_EP_SUPPORT -DRT6352_EL_SUPPORT
+endif
+endif
+
+### MT7602E/MT7612E (PCIe)
+ifeq ($(CHIP_MT76X2),y)
 EXTRA_CFLAGS += -DRT65xx -DMT76x2 -DMT7612
 #EXTRA_CFLAGS += -DCONFIG_FPGA_MODE
+EXTRA_CFLAGS += -DRTMP_PCI_SUPPORT -DRTMP_MAC_PCI
 EXTRA_CFLAGS += -DRLT_MAC -DRLT_BBP -DMT_RF -DRTMP_RF_RW_SUPPORT
 EXTRA_CFLAGS += -DA_BAND_SUPPORT
 EXTRA_CFLAGS += -DRX_DMA_SCATTER -DCONFIG_ANDES_SUPPORT
@@ -259,14 +330,19 @@ EXTRA_CFLAGS += -DNEW_RATE_ADAPT_SUPPORT
 #EXTRA_CFLAGS += -DNEW_RATE_ADAPT_QUICK_DOWN # has dropdown to CCK/0 issue on 5GHz
 EXTRA_CFLAGS += -DFIFO_EXT_SUPPORT
 EXTRA_CFLAGS += -DDYNAMIC_VGA_SUPPORT
+#EXTRA_CFLAGS += -DMICROWAVE_OVEN_SUPPORT
 EXTRA_CFLAGS += -DMCS_LUT_SUPPORT -DPEER_DELBA_TX_ADAPT
 EXTRA_CFLAGS += -DDROP_MASK_SUPPORT
-#EXTRA_CFLAGS += -DMULTI_CLIENT_SUPPORT
+EXTRA_CFLAGS += -DMULTI_CLIENT_SUPPORT
 EXTRA_CFLAGS += -DRTMP_TEMPERATURE_TX_ALC
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
 #EXTRA_CFLAGS += -DSPECIFIC_TX_POWER_SUPPORT
 #EXTRA_CFLAGS += -DTHERMAL_PROTECT_SUPPORT
 #EXTRA_CFLAGS += -DDMA_BUSY_RESET
+ifeq ($(CHIP_MT7620),y)
+EXTRA_CFLAGS += -DMULTI_INF_SUPPORT
+endif
+endif
 
 ifeq ($(CONFIG_MT76X2_AP_READ_MAC_FROM_MTD),y)
 EXTRA_CFLAGS += -DREAD_MAC_FROM_EEPROM
@@ -280,6 +356,7 @@ endif
 
 ifeq ($(CONFIG_MT76X2_AP_ATE),y)
 EXTRA_CFLAGS += -DRALINK_ATE -DCONFIG_RT2880_ATE_CMD_NEW
+EXTRA_CFLAGS += -DRTMP_EFUSE_SUPPORT -DCAL_FREE_IC_SUPPORT
 ifeq ($(CONFIG_MT76X2_AP_QA),y)
 EXTRA_CFLAGS += -DRALINK_QA
 endif
