project configs: update board profiles due last changes
Also migrate MT7620 + MT7612E boards (RT-AC54U, RT-AC1200HP) to new RLT driver MT76x2 v3.0.4.0 (with support MT7620)

--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -835,7 +835,7 @@ CONFIG_NET_CORE=y
 # CONFIG_BONDING is not set
 # CONFIG_DUMMY is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_MII=y
+# CONFIG_MII is not set
 CONFIG_IFB=m
 # CONFIG_NETCONSOLE is not set
 # CONFIG_NETPOLL is not set
@@ -1395,6 +1395,7 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
 CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_MT7620 is not set
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 # CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
@@ -1412,9 +1413,10 @@ CONFIG_RT_SECOND_IF_NONE=y
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
 CONFIG_RT_SECOND_CARD=0
 
 #
@@ -1422,11 +1424,10 @@ CONFIG_RT_SECOND_CARD=0
 #
 
 #
-# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_MBSS=y
@@ -1437,23 +1438,32 @@ CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 CONFIG_RT2860V2_AP_GREENAP=y
-# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 CONFIG_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC is not set
 # CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
-CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
-CONFIG_RT2860V2_AP_SINGLE_SKU=y
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
+# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION is not set
+
+#
+# Wireless drivers common configs
+#
+CONFIG_RT_SINGLE_SKU=y
+CONFIG_RT_MAX_CLIENTS=32
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
