--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -560,7 +560,6 @@ CONFIG_IP_NF_RAW=m
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -692,7 +691,7 @@ CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
+# CONFIG_WEXT_PROC is not set
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 # CONFIG_CFG80211 is not set
@@ -796,16 +795,16 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_UBI is not set
 
 #
-# Ralink Flash Type support
+# Ralink MTD support
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
+# CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_MTD_SPI_FAST_CLOCK is not set
 # CONFIG_MTD_SPI_READ_NORM is not set
 # CONFIG_MTD_SPI_READ_FAST is not set
 CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
-# CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
 CONFIG_RT2880_FLASH_16M=y
@@ -1017,7 +1016,6 @@ CONFIG_RALINK_GPIO=y
 CONFIG_RALINK_GPIOMODE_EPHY=y
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 CONFIG_RALINK_GPIOMODE_PA_G=y
-# CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
 CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
@@ -1822,8 +1820,8 @@ CONFIG_GENERIC_ATOMIC64=y
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
-# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
+# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
@@ -1854,6 +1852,7 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
 CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_MT7620 is not set
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 # CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
@@ -1871,20 +1870,21 @@ CONFIG_RT_SECOND_IF_NONE=y
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
+CONFIG_RT_SECOND_CARD=0
 
 #
 # Wireless drivers settings
 #
 
 #
-# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_MBSS=y
@@ -1895,23 +1895,32 @@ CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 CONFIG_RT2860V2_AP_GREENAP=y
-# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 CONFIG_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
 CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
-CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
-# CONFIG_RT2860V2_AP_SINGLE_SKU is not set
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
+# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION is not set
+
+#
+# Wireless drivers common configs
+#
+# CONFIG_RT_SINGLE_SKU is not set
+CONFIG_RT_MAX_CLIENTS=40
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
