--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -601,7 +601,6 @@ CONFIG_IP_NF_RAW=m
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -1949,9 +1948,10 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RT_FIRST_IF_RT5592 is not set
 # CONFIG_RT_FIRST_IF_RT3593 is not set
 # CONFIG_RT_FIRST_IF_MT7610E is not set
-# CONFIG_RT_FIRST_IF_MT7612E is not set
 # CONFIG_RT_FIRST_IF_MT7602E is not set
+# CONFIG_RT_FIRST_IF_MT7612E is not set
 CONFIG_RT_FIRST_IF_MT7603E=y
+# CONFIG_RT_FIRST_IF_MT7615E is not set
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 # CONFIG_RT_FIRST_IF_EEPROM_EFUSE is not set
@@ -1970,9 +1970,10 @@ CONFIG_RT_FIRST_CARD_EEPROM="flash"
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-CONFIG_RT_SECOND_IF_MT7612E=y
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+CONFIG_RT_SECOND_IF_MT7612E=y
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
 # CONFIG_RT_SECOND_IF_RANGE_2GHZ is not set
 CONFIG_RT_SECOND_IF_RANGE_5GHZ=y
 CONFIG_RT_SECOND_IF_EEPROM_FLASH=y
@@ -1987,13 +1988,12 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 #
 
 #
-# AP MODE MediaTek MT7602E/MT7612E PCIe Wireless Driver
+# AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
 #
 CONFIG_MT76X2_AP=m
 # CONFIG_MT76X2_AP_LED is not set
 CONFIG_MT76X2_AP_LED_SOFT=y
 CONFIG_MT76X2_AP_LED_SOFT_GPIO=15
-# CONFIG_MT76X2_AP_WSC is not set
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
@@ -2001,62 +2001,54 @@ CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
 # CONFIG_MT76X2_AP_MAC_REPEATER is not set
-# CONFIG_MT76X2_AP_NETIF_BLOCK is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
-# CONFIG_MT76X2_AP_ED_MONITOR is not set
-# CONFIG_MT76X2_AP_BAND_STEERING is not set
-CONFIG_MT76X2_AP_GREENAP=y
-# CONFIG_MT76X2_AP_DLS is not set
+# CONFIG_MT76X2_AP_GREENAP is not set
 # CONFIG_MT76X2_AP_IDS is not set
-# CONFIG_MT76X2_AP_80211N_DRAFT3 is not set
+# CONFIG_MT76X2_AP_DLS is not set
 CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
-# CONFIG_MT76X2_AP_80211W_PMF is not set
-# CONFIG_MT76X2_AP_IGMP_SNOOP is not set
-# CONFIG_MT76X2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_MT76X2_AP_DELAYED_TCP_ACK is not set
-CONFIG_MT76X2_AP_SINGLE_SKU=y
-CONFIG_MT76X2_AP_READ_MAC_FROM_MTD=y
-# CONFIG_MT76X2_AP_BIG_ENDIAN is not set
-# CONFIG_MT76X2_AP_MC_SUPPORT is not set
-# CONFIG_MT76X2_AP_ATE is not set
-# CONFIG_MT76X2_AP_DBG is not set
 
 #
-# AP MODE MediaTek MT7603E PCIe Wireless Driver
+# AP MODE MediaTek MT7603E PCIe Wireless driver
 #
 CONFIG_MT76X3_AP=m
 # CONFIG_MT76X3_AP_LED is not set
 CONFIG_MT76X3_AP_LED_SOFT=y
 CONFIG_MT76X3_AP_LED_SOFT_GPIO=14
-# CONFIG_MT76X3_AP_WSC is not set
 CONFIG_MT76X3_AP_LLTD=y
 CONFIG_MT76X3_AP_WDS=y
 CONFIG_MT76X3_AP_MBSS=y
 CONFIG_MT76X3_AP_APCLI=y
-# CONFIG_MT76X3_AP_MULTI_APCLI_SUPPORT is not set
+# CONFIG_MT76X3_AP_MULTI_APCLI is not set
 # CONFIG_MT76X3_AP_MAC_REPEATER is not set
-# CONFIG_MT76X3_AP_AIRPLAY_SUPPORT is not set
-# CONFIG_MT76X3_AP_NETIF_BLOCK is not set
+# CONFIG_MT76X3_AP_AIRPLAY is not set
 # CONFIG_MT76X3_AP_DFS is not set
 # CONFIG_MT76X3_AP_CARRIER is not set
-# CONFIG_MT76X3_AP_BAND_STEERING is not set
-# CONFIG_MT76X3_AP_DOT11R_FT_SUPPORT is not set
-# CONFIG_MT76X3_AP_DOT11K_RRM_SUPPORT is not set
 # CONFIG_MT76X3_AP_GREENAP is not set
-# CONFIG_MT76X3_AP_DLS is not set
 # CONFIG_MT76X3_AP_IDS is not set
-# CONFIG_MT76X3_AP_80211N_DRAFT3 is not set
-# CONFIG_MT76X3_AP_80211W_PMF is not set
-# CONFIG_MT76X3_AP_IGMP_SNOOP is not set
-# CONFIG_MT76X3_AP_MCAST_RATE_SPECIFIC is not set
-CONFIG_MT76X3_AP_SINGLE_SKU=y
-CONFIG_MT76X3_AP_READ_MAC_FROM_MTD=y
-# CONFIG_MT76X3_AP_BIG_ENDIAN is not set
-# CONFIG_MT76X3_AP_MC_SUPPORT is not set
-# CONFIG_MT76X3_AP_ATE is not set
-# CONFIG_MT76X3_AP_DBG is not set
+# CONFIG_MT76X3_AP_DLS is not set
+
+#
+# Wireless drivers common configs
+#
+CONFIG_RT_SINGLE_SKU=y
+CONFIG_RT_MAX_CLIENTS=48
+# CONFIG_RT_BAND_STEERING is not set
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
@@ -2101,4 +2093,3 @@ CONFIG_RA_HW_NAT_WIFI=y
 # Ralink Peripheral Devices
 #
 CONFIG_MTK_XHCI=y
-CONFIG_RTDEV_PCI=y
