--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -661,7 +661,7 @@ CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
+# CONFIG_WEXT_PROC is not set
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 # CONFIG_CFG80211 is not set
@@ -770,15 +770,15 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_UBI is not set
 
 #
-# Ralink Flash Type support
+# Ralink MTD support
 #
 CONFIG_MTD_RALINK=y
 # CONFIG_MTD_NOR_RALINK is not set
 CONFIG_MTD_SPI_RALINK=y
+# CONFIG_MTD_NAND_RALINK is not set
 CONFIG_MTD_SPI_FAST_CLOCK=y
 CONFIG_MTD_SPI_READ_NORM=y
 # CONFIG_MTD_SPI_READ_FAST is not set
-# CONFIG_MTD_NAND_RALINK is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
 CONFIG_RT2880_FLASH_16M=y
@@ -986,14 +986,11 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-# CONFIG_RALINK_GPIOMODE_GE1 is not set
-# CONFIG_RALINK_GPIOMODE_GE2 is not set
 CONFIG_RALINK_GPIOMODE_PCI=y
 # CONFIG_RALINK_GPIOMODE_LNA_G is not set
 # CONFIG_RALINK_GPIOMODE_LNA_A is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 CONFIG_RALINK_GPIOMODE_JTAG=y
-# CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
 CONFIG_RALINK_GPIOMODE_I2C=y
@@ -1796,11 +1793,11 @@ CONFIG_RAETH_SG_DMA_TX=y
 CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_RGMII_AN is not set
 # CONFIG_RAETH_GMAC2 is not set
-CONFIG_MAC_TO_MAC_MODE=y
 # CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 # CONFIG_RAETH_DEBUG is not set
+CONFIG_MAC_TO_MAC_MODE=y
 
 #
 # Ralink Wireless 802.11 Support
@@ -1828,11 +1825,12 @@ CONFIG_RT_SECOND_IF_RT3352_INIC=y
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
 CONFIG_RT_SECOND_IF_RANGE_2GHZ=y
-# CONFIG_RT_SECOND_IF_RANGE_5GHZ is not set
+CONFIG_RT_SECOND_CARD=3352
 
 #
 # Wireless drivers settings
@@ -1841,11 +1839,10 @@ CONFIG_RT_SECOND_IF_RANGE_2GHZ=y
 CONFIG_RALINK_RT3883_3T3R=y
 
 #
-# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 # CONFIG_RT2860V2_AP_WMM_ACM is not set
@@ -1857,25 +1854,34 @@ CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 CONFIG_RT2860V2_AP_GREENAP=y
-# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 # CONFIG_RT2860V2_AP_TXBF is not set
-CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-# CONFIG_RT2860V2_AP_SNMP is not set
-CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
-# CONFIG_RT2860V2_AP_SINGLE_SKU is not set
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
 
 #
-# AP MODE Ralink RT3352 iNIC MII Wireless Driver
+# AP MODE Ralink RT3352 iNIC MII Wireless driver
 #
 CONFIG_RT3352_INIC_MII=m
 CONFIG_RT3352_INIC_AP=y
+
+#
+# Wireless drivers common configs
+#
+# CONFIG_RT_SINGLE_SKU is not set
+CONFIG_RT_MAX_CLIENTS=48
+# CONFIG_RT_BAND_STEERING is not set
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
