--- a/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
@@ -575,7 +575,6 @@ CONFIG_IP_NF_RAW=m
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -813,7 +812,7 @@ CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_UBI is not set
 
 #
-# Ralink Flash Type support
+# Ralink MTD support
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
@@ -1059,7 +1058,6 @@ CONFIG_RALINK_GPIO=y
 # CONFIG_RALINK_GPIOMODE_EPHY is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 # CONFIG_RALINK_GPIOMODE_PA_G is not set
-# CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
 CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
@@ -1882,8 +1880,8 @@ CONFIG_GENERIC_ATOMIC64=y
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
-# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
+# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
@@ -1913,12 +1911,12 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # 1st Wireless Interface
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
-CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_RT2860 is not set
+CONFIG_RT_FIRST_IF_MT7620=y
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
-# CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
-CONFIG_RT_FIRST_CARD=2860
+CONFIG_RT_FIRST_CARD=7620
 CONFIG_RT_FIRST_CARD_EEPROM="flash"
 
 #
@@ -1931,9 +1929,10 @@ CONFIG_RT_FIRST_CARD_EEPROM="flash"
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-CONFIG_RT_SECOND_IF_MT7612E=y
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+CONFIG_RT_SECOND_IF_MT7612E=y
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
 # CONFIG_RT_SECOND_IF_RANGE_2GHZ is not set
 CONFIG_RT_SECOND_IF_RANGE_5GHZ=y
 CONFIG_RT_SECOND_IF_EEPROM_FLASH=y
@@ -1948,44 +1947,10 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 #
 
 #
-# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
-#
-CONFIG_RT2860V2_AP=m
-CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
-CONFIG_RT2860V2_AP_LLTD=y
-CONFIG_RT2860V2_AP_WDS=y
-CONFIG_RT2860V2_AP_MBSS=y
-# CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
-CONFIG_RT2860V2_AP_APCLI=y
-# CONFIG_RT2860V2_AP_MAC_REPEATER is not set
-# CONFIG_RT2860V2_AP_CARRIER is not set
-# CONFIG_RT2860V2_AP_DLS is not set
-# CONFIG_RT2860V2_AP_IDS is not set
-CONFIG_RT2860V2_AP_GREENAP=y
-# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
-CONFIG_INTERNAL_PA_INTERNAL_LNA=y
-# CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
-# CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
-CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
-# CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
-# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
-# CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
-CONFIG_RT2860V2_AP_SINGLE_SKU=y
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
-
-#
-# AP MODE MediaTek MT7602E/MT7612E PCIe Wireless Driver
+# AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
 #
 CONFIG_MT76X2_AP=m
 CONFIG_MT76X2_AP_LED=y
-# CONFIG_MT76X2_AP_WSC is not set
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
@@ -1993,27 +1958,40 @@ CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
 # CONFIG_MT76X2_AP_MAC_REPEATER is not set
-# CONFIG_MT76X2_AP_NETIF_BLOCK is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
-# CONFIG_MT76X2_AP_ED_MONITOR is not set
-# CONFIG_MT76X2_AP_BAND_STEERING is not set
-CONFIG_MT76X2_AP_GREENAP=y
-# CONFIG_MT76X2_AP_DLS is not set
+# CONFIG_MT76X2_AP_GREENAP is not set
 # CONFIG_MT76X2_AP_IDS is not set
-# CONFIG_MT76X2_AP_80211N_DRAFT3 is not set
+# CONFIG_MT76X2_AP_DLS is not set
 CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_TXBF_SUPPORT is not set
-# CONFIG_MT76X2_AP_80211W_PMF is not set
-# CONFIG_MT76X2_AP_IGMP_SNOOP is not set
-# CONFIG_MT76X2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_MT76X2_AP_DELAYED_TCP_ACK is not set
-CONFIG_MT76X2_AP_SINGLE_SKU=y
-CONFIG_MT76X2_AP_READ_MAC_FROM_MTD=y
-# CONFIG_MT76X2_AP_BIG_ENDIAN is not set
-# CONFIG_MT76X2_AP_MC_SUPPORT is not set
-# CONFIG_MT76X2_AP_ATE is not set
-# CONFIG_MT76X2_AP_DBG is not set
+CONFIG_MT76X2_AP_INTERNAL_PA_INTERNAL_LNA=y
+# CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA is not set
+# CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA is not set
+CONFIG_MT76X2_AP_RTMP_INTERNAL_TX_ALC=y
+# CONFIG_MT76X2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
+# CONFIG_MT76X2_AP_ADJ_PWR_CONSUMPTION is not set
+
+#
+# Wireless drivers common configs
+#
+CONFIG_RT_SINGLE_SKU=y
+CONFIG_RT_MAX_CLIENTS=40
+# CONFIG_RT_BAND_STEERING is not set
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
@@ -2056,4 +2034,3 @@ CONFIG_RA_HW_NAT_WIFI=y
 # Ralink Peripheral Devices
 #
 CONFIG_RT3XXX_EHCI_OHCI=y
-CONFIG_RTDEV_PCI=y
