--- a/trunk/configs/boards/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/boards/SWR1100/kernel-3.4.x.config
@@ -578,7 +578,6 @@ CONFIG_IP_NF_RAW=m
 #
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-# CONFIG_IP6_NF_QUEUE is not set
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -710,7 +709,7 @@ CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
+# CONFIG_WEXT_PROC is not set
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 # CONFIG_CFG80211 is not set
@@ -823,7 +822,7 @@ CONFIG_MTD_CFI_UTIL=y
 # CONFIG_MTD_UBI is not set
 
 #
-# Ralink Flash Type support
+# Ralink MTD support
 #
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_NOR_RALINK=y
@@ -1061,14 +1060,11 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-# CONFIG_RALINK_GPIOMODE_GE1 is not set
-# CONFIG_RALINK_GPIOMODE_GE2 is not set
 CONFIG_RALINK_GPIOMODE_PCI=y
 # CONFIG_RALINK_GPIOMODE_LNA_G is not set
 # CONFIG_RALINK_GPIOMODE_LNA_A is not set
 # CONFIG_RALINK_GPIOMODE_MDIO is not set
 CONFIG_RALINK_GPIOMODE_JTAG=y
-# CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 CONFIG_RALINK_GPIOMODE_SPI=y
 CONFIG_RALINK_GPIOMODE_I2C=y
@@ -1910,8 +1906,8 @@ CONFIG_RTL8367_IGMP_SNOOPING=y
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
 # CONFIG_RAETH_NAPI_GRO is not set
-# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_BQL=y
+# CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
@@ -1921,11 +1917,11 @@ CONFIG_RAETH_SG_DMA_TX=y
 CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_RGMII_AN is not set
 # CONFIG_RAETH_GMAC2 is not set
-CONFIG_MAC_TO_MAC_MODE=y
 # CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 # CONFIG_RAETH_DEBUG is not set
+CONFIG_MAC_TO_MAC_MODE=y
 
 #
 # Ralink Wireless 802.11 Support
@@ -1953,9 +1949,10 @@ CONFIG_RT_SECOND_IF_RT3090=y
 # CONFIG_RT_SECOND_IF_RT5592 is not set
 # CONFIG_RT_SECOND_IF_RT3593 is not set
 # CONFIG_RT_SECOND_IF_MT7610E is not set
-# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
 # CONFIG_RT_SECOND_IF_MT7603E is not set
+# CONFIG_RT_SECOND_IF_MT7615E is not set
 CONFIG_RT_SECOND_IF_RANGE_2GHZ=y
 CONFIG_RT_SECOND_IF_EEPROM_FLASH=y
 # CONFIG_RT_SECOND_IF_EEPROM_EFUSE is not set
@@ -1971,11 +1968,10 @@ CONFIG_RALINK_RT3662_2T2R=y
 # CONFIG_RALINK_RT3883_3T3R is not set
 
 #
-# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
-# CONFIG_RT2860V2_AP_WSC is not set
 CONFIG_RT2860V2_AP_LLTD=y
 CONFIG_RT2860V2_AP_WDS=y
 # CONFIG_RT2860V2_AP_WMM_ACM is not set
@@ -1987,45 +1983,43 @@ CONFIG_RT2860V2_AP_APCLI=y
 # CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
 CONFIG_RT2860V2_AP_GREENAP=y
-# CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 # CONFIG_RT2860V2_AP_TXBF is not set
-CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
-# CONFIG_RT2860V2_AP_IGMP_SNOOP is not set
-# CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC is not set
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
-# CONFIG_RT2860V2_AP_SNMP is not set
-CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
-# CONFIG_RT2860V2_AP_SINGLE_SKU is not set
-# CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
-# CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
 
 #
-# AP MODE Ralink RT309x PCIe Wireless Driver
+# AP MODE Ralink RT309x PCIe Wireless driver
 #
 CONFIG_RT3090_AP=m
 # CONFIG_RT3090_AP_RT3390 is not set
 CONFIG_RT3090_AP_LED=y
-# CONFIG_RT3090_AP_WSC is not set
 CONFIG_RT3090_AP_LLTD=y
 CONFIG_RT3090_AP_WDS=y
 # CONFIG_RT3090_AP_WMM_ACM is not set
 CONFIG_RT3090_AP_MBSS=y
 CONFIG_RT3090_AP_APCLI=y
-# CONFIG_RT3090_AP_NETIF_BLOCK is not set
-# CONFIG_RT3090_AP_VIDEO_TURBINE is not set
 # CONFIG_RT3090_AP_DLS is not set
 # CONFIG_RT3090_AP_IDS is not set
 CONFIG_RT3090_AP_GREENAP=y
-CONFIG_RT3090_AP_AUTO_CH_SELECT_ENHANCE=y
-# CONFIG_RT3090_AP_80211N_DRAFT3 is not set
-# CONFIG_RT3090_AP_IGMP_SNOOP is not set
-# CONFIG_RT3090_AP_MCAST_RATE_SPECIFIC is not set
-CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
-# CONFIG_RT3090_AP_MC_SUPPORT is not set
-# CONFIG_RT3090_AP_ATE is not set
-# CONFIG_RT3090_AP_DBG is not set
+
+#
+# Wireless drivers common configs
+#
+# CONFIG_RT_SINGLE_SKU is not set
+CONFIG_RT_MAX_CLIENTS=40
+# CONFIG_RT_BAND_STEERING is not set
+# CONFIG_RT_DOT11R_FT is not set
+# CONFIG_RT_DOT11K_RRM is not set
+# CONFIG_RT_80211N_DRAFT3 is not set
+# CONFIG_RT_80211W_PMF is not set
+# CONFIG_RT_WSC is not set
+# CONFIG_RT_ED_MONITOR is not set
+# CONFIG_RT_IGMP_SNOOP is not set
+# CONFIG_RT_MCAST_RATE_SPECIFIC is not set
+# CONFIG_RT_DELAYED_TCP_ACK is not set
+# CONFIG_RT_NETIF_BLOCK is not set
+# CONFIG_RT_SNMP is not set
+CONFIG_RT_READ_MAC_FROM_MTD=y
+# CONFIG_RT_MEMORY_OPTIMIZATION is not set
+# CONFIG_RT_DEBUG is not set
 
 #
 # Ralink NAT Acceleration Mode
@@ -2069,4 +2063,3 @@ CONFIG_RA_HW_NAT_WIFI=y
 # Ralink Peripheral Devices
 #
 CONFIG_RT3XXX_EHCI_OHCI=y
-CONFIG_RTDEV_PCI=y
