--- a/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
@@ -1914,6 +1914,7 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RT_FIRST_IF_RT2860 is not set
 CONFIG_RT_FIRST_IF_MT7620=y
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
+# CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
 CONFIG_RT_FIRST_CARD=7620
@@ -1945,6 +1946,28 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 #
 # Wireless drivers settings
 #
+
+#
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless driver
+#
+CONFIG_RT2860V2_AP=m
+CONFIG_RT2860V2_AP_LED=y
+CONFIG_RT2860V2_AP_LLTD=y
+CONFIG_RT2860V2_AP_WDS=y
+CONFIG_RT2860V2_AP_MBSS=y
+# CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_RT2860V2_AP_APCLI=y
+# CONFIG_RT2860V2_AP_MAC_REPEATER is not set
+# CONFIG_RT2860V2_AP_CARRIER is not set
+# CONFIG_RT2860V2_AP_DLS is not set
+# CONFIG_RT2860V2_AP_IDS is not set
+CONFIG_RT2860V2_AP_GREENAP=y
+CONFIG_INTERNAL_PA_INTERNAL_LNA=y
+# CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
+# CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
+CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
+# CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
+# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION is not set
 
 #
 # AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
