--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -1903,6 +1903,30 @@ CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION is not set
 
 #
+# AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
+#
+CONFIG_MT76X2_AP=m
+CONFIG_MT76X2_AP_LED=y
+CONFIG_MT76X2_AP_LLTD=y
+CONFIG_MT76X2_AP_WDS=y
+CONFIG_MT76X2_AP_MBSS=y
+# CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE is not set
+CONFIG_MT76X2_AP_APCLI=y
+# CONFIG_MT76X2_AP_APCLI_CERT is not set
+# CONFIG_MT76X2_AP_MAC_REPEATER is not set
+# CONFIG_MT76X2_AP_DFS is not set
+# CONFIG_MT76X2_AP_CARRIER is not set
+CONFIG_MT76X2_AP_GREENAP=y
+# CONFIG_MT76X2_AP_IDS is not set
+# CONFIG_MT76X2_AP_DLS is not set
+CONFIG_MT76X2_AP_INTERNAL_PA_INTERNAL_LNA=y
+# CONFIG_MT76X2_AP_INTERNAL_PA_EXTERNAL_LNA is not set
+# CONFIG_MT76X2_AP_EXTERNAL_PA_EXTERNAL_LNA is not set
+CONFIG_MT76X2_AP_RTMP_INTERNAL_TX_ALC=y
+# CONFIG_MT76X2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
+# CONFIG_MT76X2_AP_ADJ_PWR_CONSUMPTION is not set
+
+#
 # Wireless drivers common configs
 #
 # CONFIG_RT_SINGLE_SKU is not set
