board configs: rollback RT-AC1200HP and RT-AC54U to old MT7620 RTMP driver (RLT driver need several fixes for RTMP hardware)

--- a/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
@@ -1917,13 +1917,13 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # 1st Wireless Interface
 #
 # CONFIG_RT_FIRST_IF_NONE is not set
-# CONFIG_RT_FIRST_IF_RT2860 is not set
-CONFIG_RT_FIRST_IF_MT7620=y
+CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_MT7620 is not set
 CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
 # CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
 CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
 CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
-CONFIG_RT_FIRST_CARD=7620
+CONFIG_RT_FIRST_CARD=2860
 CONFIG_RT_FIRST_CARD_EEPROM="flash"
 
 #
@@ -1979,7 +1979,9 @@ CONFIG_INTERNAL_PA_EXTERNAL_LNA=y
 # AP MODE MediaTek MT7620/MT7602E/MT7612E RBUS/PCIe Wireless driver
 #
 CONFIG_MT76X2_AP=m
-CONFIG_MT76X2_AP_LED=y
+# CONFIG_MT76X2_AP_LED is not set
+CONFIG_MT76X2_AP_LED_SOFT=y
+CONFIG_MT76X2_AP_LED_SOFT_GPIO=70
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
