--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -49,8 +49,9 @@ CONFIG_RALINK_MT7620=y
 # CONFIG_CAVIUM_OCTEON_SIMULATOR is not set
 # CONFIG_CAVIUM_OCTEON_REFERENCE_BOARD is not set
 CONFIG_MT7620_ASIC=y
-CONFIG_RALINK_MT7620_PLL600=y
+# CONFIG_RALINK_MT7620_PLL600 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
+# CONFIG_RALINK_CPUSLEEP is not set
 # CONFIG_RT2880_DRAM_16M is not set
 CONFIG_RT2880_DRAM_32M=y
 # CONFIG_RT2880_DRAM_64M is not set
