--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -51,6 +51,7 @@ CONFIG_RALINK_MT7620=y
 CONFIG_MT7620_ASIC=y
 # CONFIG_RALINK_MT7620_PLL600 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
+# CONFIG_RALINK_CPUSLEEP is not set
 # CONFIG_RT2880_DRAM_16M is not set
 # CONFIG_RT2880_DRAM_32M is not set
 CONFIG_RT2880_DRAM_64M=y
