--- a/trunk/configs/templates/n11p_base.config
+++ b/trunk/configs/templates/n11p_base.config
@@ -18,6 +18,12 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
+### Force MT7620 CPU clock to 600MHz (override Uboot settings)
+CONFIG_FIRMWARE_CPU_600MHZ=y
+
+### Enable MT7620 CPU sleep mode (downclock to 200MHz on idle)
+#CONFIG_FIRMWARE_CPU_SLEEP=y
+
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 2.7 = MT7620 v2.7.2.0
 ### 3.0 = MT7620 v3.0.4.0
