--- a/trunk/configs/templates/n56ub1_full.config
+++ b/trunk/configs/templates/n56ub1_full.config
@@ -18,6 +18,12 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
+### Force MT7621 CPU clock to 900MHz (override Uboot settings)
+#CONFIG_FIRMWARE_CPU_900MHZ=y
+
+### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
+#CONFIG_FIRMWARE_CPU_SLEEP=y
+
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 4.0 = MT7603E v4.0.1.0
 CONFIG_FIRMWARE_WIFI2_DRIVER=4.0
