busybox config: enable traceroute ICMP support (-I)

--- a/trunk/configs/boards/busybox.config
+++ b/trunk/configs/boards/busybox.config
@@ -859,7 +859,7 @@ CONFIG_TRACEROUTE=y
 CONFIG_TRACEROUTE6=y
 CONFIG_FEATURE_TRACEROUTE_VERBOSE=y
 # CONFIG_FEATURE_TRACEROUTE_SOURCE_ROUTE is not set
-# CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
+CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
 # CONFIG_TUNCTL is not set
 # CONFIG_FEATURE_TUNCTL_UG is not set
 # CONFIG_UDHCPC6 is not set
