wifi drivers: MT76x2E: support separated soft-blink LED for both devices

--- a/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
@@ -1983,6 +1983,7 @@ CONFIG_MT76X2_AP=m
 # CONFIG_MT76X2_AP_LED is not set
 CONFIG_MT76X2_AP_LED_SOFT=y
 CONFIG_MT76X2_AP_LED_SOFT_GPIO=70
+CONFIG_MT76X2_AP_LED_SOFT_GPIO_DEV1=-1
 CONFIG_MT76X2_AP_LLTD=y
 CONFIG_MT76X2_AP_WDS=y
 CONFIG_MT76X2_AP_MBSS=y
