--- a/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
+++ b/trunk/proprietary/rt_wifi/rtpci/3.0.X.X/mt76x2_ap/Makefile
@@ -422,6 +422,7 @@ endif
 ifeq ($(CONFIG_MT76X2_AP_LED_SOFT),y)
 EXTRA_CFLAGS += -DLED_SOFT_SUPPORT
 EXTRA_CFLAGS += -DLED_SOFT_BLINK_GPIO=$(CONFIG_MT76X2_AP_LED_SOFT_GPIO)
+EXTRA_CFLAGS += -DLED_SOFT_BLINK_GPIO_DEV1=$(CONFIG_MT76X2_AP_LED_SOFT_GPIO_DEV1)
 endif
 
 ifeq ($(CONFIG_MT76X2_AP_LLTD),y)
