kernel-3.x.x: add netfilter SMB fastpath module

--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.108 Kernel Configuration
+# Linux/mips 3.4.110 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -420,6 +420,7 @@ CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
 CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
+CONFIG_NETFILTER_FP_SMB=y
 CONFIG_NETFILTER_NETLINK=m
 # CONFIG_NETFILTER_NETLINK_ACCT is not set
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
