--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -410,6 +410,7 @@ CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
 CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
+CONFIG_NETFILTER_FP_SMB=y
 CONFIG_NETFILTER_NETLINK=m
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
 # CONFIG_NETFILTER_NETLINK_LOG is not set
