--- a/trunk/configs/templates/n56ub1_base.config
+++ b/trunk/configs/templates/n56ub1_base.config
@@ -24,6 +24,9 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 ### Enable MT7621 CPU sleep mode (downclock to 220MHz on idle)
 #CONFIG_FIRMWARE_CPU_SLEEP=y
 
+### Select 256MB RAM (hardware mod)
+#CONFIG_FIRMWARE_RAM_MOD_256=y
+
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 4.0 = MT7603E v4.0.1.0
 CONFIG_FIRMWARE_WIFI2_DRIVER=4.0
