kernel-3.x.x: ralink spi: fix calculate MT7621 SPI clock and update dividers, enable SPI fast clock by default to all profiles

--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -802,7 +802,7 @@ CONFIG_MTD_CFI_I2=y
 CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
-# CONFIG_MTD_SPI_FAST_CLOCK is not set
+CONFIG_MTD_SPI_FAST_CLOCK=y
 # CONFIG_MTD_SPI_READ_NORM is not set
 # CONFIG_MTD_SPI_READ_FAST is not set
 CONFIG_MTD_SPI_READ_DOR=y
