busybox config: include 'strings' applet

--- a/trunk/configs/boards/busybox.config
+++ b/trunk/configs/boards/busybox.config
@@ -738,7 +738,7 @@ CONFIG_MOUNTPOINT=y
 # CONFIG_RUNLEVEL is not set
 # CONFIG_RX is not set
 # CONFIG_SETSID is not set
-# CONFIG_STRINGS is not set
+CONFIG_STRINGS=y
 CONFIG_TIME=y
 # CONFIG_TIMEOUT is not set
 # CONFIG_TTYSIZE is not set
