board profiles: add new param 'Smart Carrier Sense' for MT7603E

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -2028,6 +2028,7 @@ CONFIG_MT76X3_AP_APCLI=y
 # CONFIG_MT76X3_AP_AIRPLAY is not set
 # CONFIG_MT76X3_AP_DFS is not set
 # CONFIG_MT76X3_AP_CARRIER is not set
+CONFIG_MT76X3_AP_SMART_CARRIER_SENSE=y
 # CONFIG_MT76X3_AP_GREENAP is not set
 # CONFIG_MT76X3_AP_IDS is not set
 # CONFIG_MT76X3_AP_DLS is not set
