--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -136,6 +136,7 @@ CONFIG_MIPS_CMP=y
 CONFIG_MIPS_GIC_IPI=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
 CONFIG_CPU_HAS_SYNC=y
+# CONFIG_LONG_CALLS is not set
 # CONFIG_HIGHMEM is not set
 CONFIG_CPU_SUPPORTS_HIGHMEM=y
 CONFIG_SYS_SUPPORTS_HIGHMEM=y
