openvpn: update to 2.3.10

--- a/trunk/user/openvpn/openvpn-2.3.x/config.h.in
+++ b/trunk/user/openvpn/openvpn-2.3.x/config.h.in
@@ -535,6 +535,9 @@
 /* Define to 1 if you have the `unlink' function. */
 #undef HAVE_UNLINK
 
+/* Define to 1 if you have the <versionhelpers.h> header file. */
+#undef HAVE_VERSIONHELPERS_H
+
 /* Define to 1 if you have the `vfork' function. */
 #undef HAVE_VFORK
 
