--- a/trunk/configs/boards/busybox.config
+++ b/trunk/configs/boards/busybox.config
@@ -607,7 +607,7 @@ CONFIG_FLOCK=y
 # CONFIG_IPCS is not set
 # CONFIG_LOSETUP is not set
 # CONFIG_LSPCI is not set
-CONFIG_LSUSB=y
+# CONFIG_LSUSB is not set
 CONFIG_MKSWAP=y
 # CONFIG_FEATURE_MKSWAP_UUID is not set
 CONFIG_MORE=y
