rc,libdisk,httpd,shared,www: add support MMC/SD and SATA control, code refactoring

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -28,6 +28,14 @@ LIBS_INCLUDE_LIBICONV=n
 LIBS_INCLUDE_LIBUSB_0=n
 LIBS_INCLUDE_LIBUSB_1=n
 LIBS_INCLUDE_MEDIA=n
+STORAGE_ENABLED=n
+
+ifdef CONFIG_MMC_BLOCK
+STORAGE_ENABLED=y
+endif
+ifdef CONFIG_BLK_DEV_SD
+STORAGE_ENABLED=y
+endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_EAP_PEAP),y)
 LIBS_INCLUDE_LIBSSL=y
@@ -49,11 +57,7 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
 
-ifdef CONFIG_USB_SUPPORT
-LIBS_INCLUDE_LIBUSB_1=y
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
-LIBS_INCLUDE_LIBUSB_0=y
-endif
+ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
@@ -68,6 +72,13 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y)
 LIBS_BUILD_SHARED=y
 LIBS_INCLUDE_LIBICONV=y
 LIBS_INCLUDE_MEDIA=y
+endif
+endif
+
+ifdef CONFIG_USB_SUPPORT
+LIBS_INCLUDE_LIBUSB_1=y
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
+LIBS_INCLUDE_LIBUSB_0=y
 endif
 endif
 
