project tree: add pppoe-discovery utility

--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -99,6 +99,7 @@ dir_y						+= lanauth
 dir_y						+= 802.1x
 dir_y						+= wpa_supplicant
 dir_y						+= pppd
+dir_y						+= pppoe
 dir_y						+= accel-pptpd
 dir_y						+= xl2tpd
 dir_y						+= rp-l2tp
