board profiles: update kernel configs according last changes

--- a/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200HP/kernel-3.4.x.config
@@ -620,6 +620,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+# CONFIG_BRIDGE_IGMP_EVENT_HOOK is not set
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1902,11 +1903,15 @@ CONFIG_RAETH_ESW=y
 # CONFIG_MT7530_GSW is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
+# CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
+# CONFIG_RAETH_ESW_IGMP_SNOOP_SW is not set
+CONFIG_RAETH_ESW_IGMP_SNOOP_HW=y
 CONFIG_RAETH_ESW_PORT_WAN=5
 CONFIG_RAETH_ESW_PORT_LAN1=0
 CONFIG_RAETH_ESW_PORT_LAN2=1
 CONFIG_RAETH_ESW_PORT_LAN3=2
 CONFIG_RAETH_ESW_PORT_LAN4=3
+CONFIG_RAETH_ESW_PORT_LAN5=-1
 # CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
