--- a/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
@@ -622,6 +622,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+CONFIG_BRIDGE_IGMP_EVENT_HOOK=y
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 # CONFIG_VLAN_8021Q_DOUBLE_TAG is not set
@@ -1884,10 +1885,13 @@ CONFIG_RTL8367=y
 CONFIG_RTL8367_API_8370=y
 # CONFIG_RTL8367_ASIC_R is not set
 CONFIG_RTL8367_ASIC_M=y
+# CONFIG_RTL8370_ASIC_M is not set
 # CONFIG_RTL8367_ASIC_RB is not set
 # CONFIG_RTL8367_ASIC_RVB is not set
 # CONFIG_RTL8367_ASIC_MB is not set
 # CONFIG_RTL8367_ASIC_MVB is not set
+# CONFIG_RTL8365_ASIC_MB is not set
+# CONFIG_RTL8368_ASIC_MB is not set
 CONFIG_RTL8367_CIF_SMI=y
 # CONFIG_RTL8367_CIF_MDIO is not set
 CONFIG_RTL8367_SMI_BUS_CPU_GPIO_DATA=1
@@ -1920,12 +1924,15 @@ CONFIG_RAETH_SG_DMA_TX=y
 # CONFIG_GE1_RVMII_FORCE_100 is not set
 CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_RGMII_AN is not set
+# CONFIG_GE1_RGMII_NONE is not set
 CONFIG_RAETH_GMAC2=y
 # CONFIG_GE2_MII_FORCE_100 is not set
 # CONFIG_GE2_MII_AN is not set
 # CONFIG_GE2_RVMII_FORCE_100 is not set
 CONFIG_GE2_RGMII_FORCE_1000=y
 # CONFIG_GE2_RGMII_AN is not set
+CONFIG_RAETH_BOTH_GMAC=y
+# CONFIG_RAETH_SWAP_GDMA is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 # CONFIG_RAETH_DEBUG is not set
