--- a/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/boards/RT-N65U/kernel-3.0.x.config
@@ -589,6 +589,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+CONFIG_BRIDGE_IGMP_EVENT_HOOK=y
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1762,10 +1763,13 @@ CONFIG_RTL8367=y
 CONFIG_RTL8367_API_8367B=y
 # CONFIG_RTL8367_ASIC_R is not set
 # CONFIG_RTL8367_ASIC_M is not set
+# CONFIG_RTL8370_ASIC_M is not set
 CONFIG_RTL8367_ASIC_RB=y
 # CONFIG_RTL8367_ASIC_RVB is not set
 # CONFIG_RTL8367_ASIC_MB is not set
 # CONFIG_RTL8367_ASIC_MVB is not set
+# CONFIG_RTL8365_ASIC_MB is not set
+# CONFIG_RTL8368_ASIC_MB is not set
 # CONFIG_RTL8367_CIF_SMI is not set
 CONFIG_RTL8367_CIF_MDIO=y
 CONFIG_RTL8367_PORT_WAN=0
@@ -1794,8 +1798,8 @@ CONFIG_RAETH_SG_DMA_TX=y
 # CONFIG_GE1_RVMII_FORCE_100 is not set
 CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_RGMII_AN is not set
+# CONFIG_GE1_RGMII_NONE is not set
 # CONFIG_RAETH_GMAC2 is not set
-# CONFIG_RAETH_SNMPD is not set
 CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 # CONFIG_RAETH_DEBUG is not set
