--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -619,6 +619,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+CONFIG_BRIDGE_IGMP_EVENT_HOOK=y
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1877,6 +1878,8 @@ CONFIG_RAETH_ESW=y
 # CONFIG_RAETH_ESW_ONE_PORT is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
+# CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
+CONFIG_RAETH_ESW_IGMP_SNOOP_SW=y
 CONFIG_RAETH_ESW_PORT_WAN=0
 CONFIG_RAETH_ESW_PORT_LAN1=1
 CONFIG_RAETH_ESW_PORT_LAN2=2
