--- a/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N11P/kernel-3.4.x.config
@@ -581,6 +581,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+# CONFIG_BRIDGE_IGMP_EVENT_HOOK is not set
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1378,6 +1379,9 @@ CONFIG_RAETH_ESW=y
 # CONFIG_MT7530_GSW is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
+# CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
+# CONFIG_RAETH_ESW_IGMP_SNOOP_SW is not set
+CONFIG_RAETH_ESW_IGMP_SNOOP_HW=y
 CONFIG_RAETH_ESW_PORT_WAN=4
 CONFIG_RAETH_ESW_PORT_LAN1=3
 CONFIG_RAETH_ESW_PORT_LAN2=2
