--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -605,6 +605,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+# CONFIG_BRIDGE_IGMP_EVENT_HOOK is not set
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1836,6 +1837,9 @@ CONFIG_RAETH_ESW=y
 # CONFIG_MT7530_GSW is not set
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
+# CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
+# CONFIG_RAETH_ESW_IGMP_SNOOP_SW is not set
+CONFIG_RAETH_ESW_IGMP_SNOOP_HW=y
 CONFIG_RAETH_ESW_PORT_WAN=0
 CONFIG_RAETH_ESW_PORT_LAN1=1
 CONFIG_RAETH_ESW_PORT_LAN2=2
