--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -647,6 +647,7 @@ CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_IGMP_SNOOPING=y
+# CONFIG_BRIDGE_IGMP_EVENT_HOOK is not set
 CONFIG_BRIDGE_EAP=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_DOUBLE_TAG=y
@@ -1926,9 +1927,14 @@ CONFIG_RAETH_GMAC2=y
 CONFIG_GE2_INTERNAL_GMAC_P5=y
 # CONFIG_GE2_INTERNAL_GPHY_P4 is not set
 # CONFIG_GE2_INTERNAL_GPHY_P0 is not set
+CONFIG_RAETH_BOTH_GMAC=y
+# CONFIG_RAETH_SWAP_GDMA is not set
 CONFIG_MT7530_GSW=y
 # CONFIG_RAETH_SPECIAL_TAG is not set
 CONFIG_RAETH_ESW_CONTROL=y
+# CONFIG_RAETH_ESW_IGMP_SNOOP_OFF is not set
+# CONFIG_RAETH_ESW_IGMP_SNOOP_SW is not set
+CONFIG_RAETH_ESW_IGMP_SNOOP_HW=y
 CONFIG_RAETH_ESW_PORT_WAN=4
 CONFIG_RAETH_ESW_PORT_LAN1=3
 CONFIG_RAETH_ESW_PORT_LAN2=2
